# sql_model_query

./: db.sqlite3  llm_query.postman_collection.json  pyproject.toml  requirements.txt  sql_query.postman_collection.json
database_query_app/: admin.py  apps.py  database.py  read.md  urls.py  views.py
database_query_app/migrations/: 0001_initial.py
llm_project/: settings.py  urls.py
llm_query_app/: apps.py  models.py  serializers.py  urls.py
llm_query_app/migrations/: 0001_initial.py
sql_model_query.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
